--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Free Code React Clone</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="icon" href="./Image/freecodeicon.avif">
         <link
             rel="preconnect"
             href="https://fonts.gstatic.com"
